--- a/iaroapp/static/css/customers_auth.css
+++ b/iaroapp/static/css/customers_auth.css
@@ -80,14 +80,16 @@
     opacity: 0;
     visibility: hidden;
     overflow: hidden;
-    transition: max-height 0.6s ease, opacity 0.6s ease, visibility 0.6s;
+    margin: 0 !important;
+    padding: 0 !important;
+    transition: max-height 0.4s ease, opacity 0.4s ease, visibility 0.4s ease;
 }
 
 .visible_text {
     max-height: 300px;
     opacity: 1;
     visibility: visible;
-    transition: max-height 0.6s ease, opacity 0.6s ease;
+    transition: max-height 0.4s ease, opacity 0.4s ease,visibility 0.4s ease;
 }
 
 .blur-effect {
