--- a/customers/templates/customers_base.html
+++ b/customers/templates/customers_base.html
@@ -45,12 +45,13 @@
 </head>
 
 <div class="container-fluid card-container">
-    <div class="card p-4" style="max-width: 400px; margin: auto; border-radius: 15px;">
-        <div class="logo-container text-center mb-2">
-            <img src="{% static 'images/logo.png' %}" alt="Logo" width="175" height="57">
+    {% block main %}
+        <div class="card p-4" style="max-width: 400px; margin: auto; border-radius: 15px;">
+            <div class="logo-container text-center mb-3">
+                <img src="{% static 'images/logo.png' %}" alt="Logo" width="175" height="57">
+            </div>
+        {% block content %}{% endblock content%}
         </div>
 
-    {% block content %}{% endblock %}
-</div>
-
+    {% endblock main %}
 </div>
