found how to fix social auth email verification if account was created in sign up form with same email, added adapters

--- a/customers/templates/customers_index.html
+++ b/customers/templates/customers_index.html
@@ -80,7 +80,7 @@
                         <path id="wave2"
                               d="M-941,1510c89-58,147-115,211-201s142-153,210-195s144-42,208-86s69-130,70-173s5-129,38-193 c0,0,17.5-27.5,30.9-40.1C-159.6,609.4-137,593-137,593c89-58,147-115,211-201s142-153,210-195s144-42,208-86s69-130,70-173 s5-129,38-193v1765H-941z"/>
                     </g>
-                    <g fill="#d7e9cf">
+                    <g fill="#eaede8">
                         <path id="wave1"
                               d="M1551.5-1044.5c0,0-63,27-131,91s-122,185-186,244s-163,152.7-206,263.3s-90,162.7-128,189.7c0,0-14,10-26,16 c-16,8-24,11-24,11s-63,27-131,91s-122,185-186,244s-163,152.7-206,263.3c-9,23.2-18.2,43.9-27.5,62.3c56.5,0,1255.5-0.1,1255.5-0.1 L1551.5-1044.5z"/>
                     </g>
