--- a/iaroapp/templates/includes/navigation.html
+++ b/iaroapp/templates/includes/navigation.html
@@ -1,6 +1,6 @@
 {% load static %}
 <!-- Navbar -->
-<nav class="navbar navbar-main navbar-expand-lg px-0 mx-4 shadow-none border-radius-xl" id="navbarBlur"
+<nav class="navbar navbar-main navbar-expand-lg px-0 mx-4 mt-3 shadow-none border-radius-xl" id="navbarBlur"
      navbar-scroll="true">
     <div class="container-fluid py-1 px-3">
         {{ pageTitle }}
