--- a/iaroapp/templates/index.html
+++ b/iaroapp/templates/index.html
@@ -215,16 +215,16 @@
     <input type="hidden" name="formatted_address" id="formatted_address" value="{{ formatted_address }}">
 
     <button
-        class="h6 text-bold mt-3 w-35 {% if formatted_address == 'iaro Ost Karlsruhe' %}btn-active{% else %}btn-default{% endif %}"
+        class="h6 text-bold mt-3 w-35 {% if formatted_address == 'Iaro Ost Karlsruhe' %}btn-active{% else %}btn-default{% endif %}"
         type="submit"
-        onclick="document.getElementById('formatted_address').value='iaro Ost Karlsruhe';">
+        onclick="document.getElementById('formatted_address').value='Iaro Ost Karlsruhe';">
         Iaro Ost
     </button>
 
     <button
-        class="h6 text-bold mt-3 w-35 {% if formatted_address == 'iaro West Karlsruhe' or formatted_address == 'iaro Space Karlsruhe' %}btn-active{% else %}btn-default{% endif %}"
+        class="h6 text-bold mt-3 w-35 {% if formatted_address == 'Iaro West Karlsruhe' or formatted_address == 'iaro Space Karlsruhe' %}btn-active{% else %}btn-default{% endif %}"
         type="submit"
-        onclick="document.getElementById('formatted_address').value='iaro West Karlsruhe';">
+        onclick="document.getElementById('formatted_address').value='Iaro West Karlsruhe';">
         Iaro West
     </button>
 </form>
