--- a/iaroapp/static/css/styles.css
+++ b/iaroapp/static/css/styles.css
@@ -8,6 +8,7 @@
 body {
   font-family: 'Inter', sans-serif !important;
   font-size: .875rem;
+  overflow-x: hidden;
 }
 
 .hidden {
@@ -16,6 +17,15 @@ body {
 .navbar-vertical .navbar-nav > .nav-item .nav-link.active{
   background-color: rgba(40, 49, 72, 0.60) !important;
   color: #fff !important;
+}
+
+.navbar {
+  box-shadow: 0 2px 10px 0 rgba(0, 0, 0, 0.15) !important;
+}
+
+.shadow-blur {
+  border-color: rgba(255, 255, 255, 0.20) !important;
+  border: 1px solid rgba(255, 255, 255, 0.20) !important;
 }
 
 body.dark-page .navbar-brand-img {
