--- a/iaroapp/static/softTheme/scss/dark-theme-core.scss
+++ b/iaroapp/static/softTheme/scss/dark-theme-core.scss
@@ -119,7 +119,7 @@ body.dark-page {
     .navbar-main.blur {
         background-color: rgba($secondary-bg-dark, 0.5) !important;
         border-color: $primary-bg-dark;
-        box-shadow: none !important;
+        //box-shadow: none !important;
 
         .nav-link {
             @include regularTextColor;
