--- a/iaroapp/templates/base_generic.html
+++ b/iaroapp/templates/base_generic.html
@@ -38,7 +38,7 @@
     {% include "includes/navigation.html" %}
 
     <div class="container-fluid px-4">
-        <div class="title d-flex justify-content-end align-items-center">
+        <div class="title mt-4 d-flex justify-content-end align-items-center">
             <div class="leftTitle">
                 {% if modifiedDate %}
                 <div class="btn-toolbar mb-md-0 text-xs align-items-center">
@@ -106,7 +106,7 @@
 <script src="{% static 'softTheme/js/plugins/smooth-scrollbar.min.js' %}"></script>
 <script src="{% static 'softTheme/js/dark-mode-handler.js' %}"></script>
 
-<script src="{% static 'softTheme/js/soft-ui-dashboard.min.js' %}"></script>
+<script src="{% static 'softTheme/js/soft-ui-dashboard.js' %}"></script>
 <script src="{% static 'softTheme/js/scripts.js' %}"></script>
 
 
