iaro card ui updates

--- a/iaroapp/templates/includes/navigation.html
+++ b/iaroapp/templates/includes/navigation.html
@@ -29,6 +29,7 @@
                         </a>
                         <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
                             <li><a class="dropdown-item" href="{% url 'profile' %}">Profile</a></li>
+                            <li><a class="dropdown-item" href="{% url 'customer_index' %}">Card Dashboard</a></li>
                             {#                            <li>#}
                             {#                                <form id="logout_form" action="{% url 'user_logout' %}" method="post"#}
                             {#                                      style="display: none;">#}
