--- a/customers/templates/customers_index.html
+++ b/customers/templates/customers_index.html
@@ -64,23 +64,30 @@
 
                     <rect class="bg" fill="#ece8e1" width="100%" height="100%"/>
 
-                    <g fill="none" stroke="#fff" stroke-width="2" stroke-dasharray="6 2 4 2.5 4 3 3.5 3">
+                    <g fill="none" stroke="rgb(255, 255, 255)" stroke-width="2" stroke-dasharray="6 2 4 2.5 4 3 3.5 3">
                         <path class="coil" d="M306.1,671.4C62.6,602.5-79.4,350.4-10.9,108.3s295.2-372.5,538.7-303.6"/>
-                        <path id="midC" class="coil" d="M352.7,333.4c-79.2-30.9-137.8-142.9-100.6-235.7S386.5-16.5,449.6-11.7"/>
-
+                        <path id="midC" class="coil"
+                              d="M250.4,151
+                              a167.5,167.5 0 1,1 335,0
+                              a167.5,167.5 0 1,1 -335,0
+                              Z"/>
                         <path id="innerC" class="coil"
-                              d="M404.4,221 c-39.6-7.4-65.7-45.6-58.3-85.2 s41.6-63.7,81.2-56.3 c39.6,7.4,65.7,45.6,58.3,85.2 s-41.6,63.7,-81.2,56.3 Z"/>
-
+                              d="M404.4,221
+                              c-39.6-7.4-65.7-45.6-58.3-85.2
+                              s41.6-63.7,81.2-56.3
+                              c39.6,7.4,65.7,45.6,58.3,85.2
+                              s-41.6,63.7,-81.2,56.3
+                              Z"/>
                     </g>
-                    <polygon id="tri1" fill="#fff" points="0,47 0,0 44,22"/>
-                    <polygon id="tri2" fill="#fff" points="0,47 0,0 44,22"/>
+                    <polygon id="tri1" fill="rgb(215, 233, 207)" points="0,47 0,0 44,22"/>
+                    <polygon id="tri2" fill="rgb(215, 233, 207)" points="0,47 0,0 44,22"/>
 
-                    {#                    <g fill="#fff">#}
-                    {#                        <circle id="orb1" cx="123" cy="410" r="105"/>#}
-                    {#                        <circle id="orb2" cx="540" cy="45" r="134"/>#}
-                    {#                    </g>#}
+                                        <g fill="rgb(215, 233, 207, 0.90)">
+{#                                            <circle id="orb1" cx="123" cy="410" r="105"/>#}
+{#                                            <circle id="orb2" cx="540" cy="45" r="134"/>#}
+                                        </g>
 
-                    <g fill="rgb(212, 202, 200, 0.75">
+                    <g fill="rgb(212, 202, 200, 1)">
                         <path id="wave2"
                               d="M-941,1510c89-58,147-115,211-201s142-153,210-195s144-42,208-86s69-130,70-173s5-129,38-193 c0,0,17.5-27.5,30.9-40.1C-159.6,609.4-137,593-137,593c89-58,147-115,211-201s142-153,210-195s144-42,208-86s69-130,70-173 s5-129,38-193v1765H-941z"/>
                     </g>
@@ -110,10 +117,10 @@
 
                         </g>
                     </g>
-
+                </g>
             </svg>
         </div>
 
     {% endblock content %}
 
-{% endblock main %}
+{% endblock main %}7
