card design adjustments

--- a/iaroapp/static/css/customers_base.css
+++ b/iaroapp/static/css/customers_base.css
@@ -1,5 +1,5 @@
 body {
-    background-color: #e9ebe6 !important;
+    background-color: rgba(234, 237, 232, 0.35) !important;
     display: flex;
     justify-content: center;
     align-items: center;
