--- a/customers/templates/customers_index.html
+++ b/customers/templates/customers_index.html
@@ -24,8 +24,11 @@
                 {{ user.email }}
                 <h6 class="text-center">Welcome to your personal iaro Card!</h6>
 
-                <a class="text-center">Staff Dashboard</a>
-                <br>
+                {% if user.customerprofile.is_employee %}
+                    <a class="text-center" href="{% url 'index' %}">Staff Dashboard</a>
+                    <br>
+                {% endif %}
+
                 <a class="text-center" href="{% url 'user_logout' %}">Log Out</a>
 
             </div>
@@ -62,7 +65,7 @@
 
                 <g mask="url(#cardMask)">
 
-                    <rect class="bg" fill="#ece8e1" width="100%" height="100%"/>
+                    <rect class="bg" fill="#d4cac8" width="100%" height="100%"/>
 
                     <g fill="none" stroke="rgb(255, 255, 255)" stroke-width="2" stroke-dasharray="6 2 4 2.5 4 3 3.5 3">
                         <path class="coil" d="M306.1,671.4C62.6,602.5-79.4,350.4-10.9,108.3s295.2-372.5,538.7-303.6"/>
@@ -79,19 +82,20 @@
                               s-41.6,63.7,-81.2,56.3
                               Z"/>
                     </g>
-                    <polygon id="tri1" fill="rgb(215, 233, 207)" points="0,47 0,0 44,22"/>
-                    <polygon id="tri2" fill="rgb(215, 233, 207)" points="0,47 0,0 44,22"/>
+                    <polygon id="tri1" fill="#d7e9cf" points="0,47 0,0 44,22"/>
+                    <polygon id="tri2" fill="#d7e9cf" points="0,47 0,0 44,22"/>
 
-                                        <g fill="rgb(215, 233, 207, 0.90)">
+                                        <g fill="#d7e9cf">
 {#                                            <circle id="orb1" cx="123" cy="410" r="105"/>#}
-{#                                            <circle id="orb2" cx="540" cy="45" r="134"/>#}
+                                            <circle id="orb2" cx="540" cy="45" r="134"/>
                                         </g>
 
-                    <g fill="rgb(212, 202, 200, 1)">
+                    <g fill="rgb(255, 255, 255, 0.60)">
+{#                    <g fill="#eaede8">#}
                         <path id="wave2"
                               d="M-941,1510c89-58,147-115,211-201s142-153,210-195s144-42,208-86s69-130,70-173s5-129,38-193 c0,0,17.5-27.5,30.9-40.1C-159.6,609.4-137,593-137,593c89-58,147-115,211-201s142-153,210-195s144-42,208-86s69-130,70-173 s5-129,38-193v1765H-941z"/>
                     </g>
-                    <g fill="#eaede8">
+                    <g fill="#d4cac8">
                         <path id="wave1"
                               d="M1551.5-1044.5c0,0-63,27-131,91s-122,185-186,244s-163,152.7-206,263.3s-90,162.7-128,189.7c0,0-14,10-26,16 c-16,8-24,11-24,11s-63,27-131,91s-122,185-186,244s-163,152.7-206,263.3c-9,23.2-18.2,43.9-27.5,62.3c56.5,0,1255.5-0.1,1255.5-0.1 L1551.5-1044.5z"/>
                     </g>
@@ -107,9 +111,9 @@
 
                     <g fill="#fff" stroke-linecap="round">
                         <g clip-path="url(#txtBoxes)">
-                            <text x="45" y="60" font-size="26" fill="#000">iaro Card</text>
-                            <text x="45" y="320" font-size="21" fill="#000">Holder Name</text>
-                            <text x="470" y="320" font-size="26" fill="#000">02/30</text>
+                            <text x="45" y="60" font-size="22" fill="#000">iaro Card</text>
+                            <text x="45" y="320" font-size="22" fill="#000">Holder Name</text>
+                            <text x="470" y="320" font-size="22" fill="#000">02/30</text>
 
                             <img style="width: 80px; position: absolute; left: 25px; top: 70px;"
                                  src="{% static '/images/iaro-card-qr.png' %}"
