--- a/customers/templates/customers_index.html
+++ b/customers/templates/customers_index.html
@@ -115,10 +115,9 @@
                             <text x="45" y="320" font-size="22" fill="#000">Holder Name</text>
                             <text x="470" y="320" font-size="22" fill="#000">02/30</text>
 
-                            <img style="width: 80px; position: absolute; left: 25px; top: 70px;"
+                            <img id="qr-code" style="width: 70px; position: absolute; left: 20px; top: 70px;"
                                  src="{% static '/images/iaro-card-qr.png' %}"
                                  alt="iaro card"/>
-
                         </g>
                     </g>
                 </g>
@@ -127,4 +126,4 @@
 
     {% endblock content %}
 
-{% endblock main %}7
+{% endblock main %}
