--- a/customers/templates/customers_index.html
+++ b/customers/templates/customers_index.html
@@ -21,7 +21,6 @@
                 <img src="{% static 'images/logo.png' %}" alt="Logo" width="175" height="57">
             </div>
             <div class="container text-center">
-                {{ user.email }}
                 <h6 class="text-center">Welcome to your personal iaro Card!</h6>
 
                 {% if user.customerprofile.is_employee %}
@@ -34,95 +33,7 @@
             </div>
         </div>
 
-        <div class="card p-0 mt-3" style="max-width: 400px; margin: auto; border-radius: 15px;">
-
-            <svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"
-                 viewBox="0 0 600 368">
-                <defs>
-                    <mask id="chipMask">
-                        <rect width="100%" height="100%" fill="#fff"/>
-                        <path fill="none" stroke="#000" stroke-width="3"
-                              d="M98,133c0,0,4.3,0,7.2,0c2.8,0,3.8,2,3.8,4s-1,6-4,6H89 M109,176.2c0,0,3.5-2.7,3.5-8.7c0-4-4-10-9-10 s-15,0-15,0 M103.5,143.5V156 M136.8,133c0,0-7.3-0.5-7.1,5c0.1,2.6,1.8,5.5,6.3,5.5c5.3-0.1,14.9-0.5,14.9-0.5 M150.4,157.5 c0,0-10.1,0-15.1,0s-9.1,6-9.1,10c0,6,3.5,8.7,3.5,8.7 M135.3,143.5V156"/>
-                    </mask>
-
-                    <mask id="cardMask">
-                        <rect rx="20" ry="20" fill="#fff" width="600" height="368"/>
-                    </mask>
-
-                    <clipPath id="txtBoxes">
-                        <rect class="txtBox" x="40" y="37" width="150" height="35"/>
-                        <rect class="txtBox" x="40" y="300" width="195" height="35"/>
-                        <rect class="txtBox" x="470" y="290" width="80" height="35"/>
-                    </clipPath>
-
-                    <clipPath id="orbClip1">
-                        <use href="#orb1"/>
-                        <use href="#orb2"/>
-                    </clipPath>
-
-                </defs>
-
-
-                <g mask="url(#cardMask)">
-
-                    <rect class="bg" fill="#d4cac8" width="100%" height="100%"/>
-
-                    <g fill="none" stroke="rgb(255, 255, 255)" stroke-width="2" stroke-dasharray="6 2 4 2.5 4 3 3.5 3">
-                        <path class="coil" d="M306.1,671.4C62.6,602.5-79.4,350.4-10.9,108.3s295.2-372.5,538.7-303.6"/>
-                        <path id="midC" class="coil"
-                              d="M250.4,151
-                              a167.5,167.5 0 1,1 335,0
-                              a167.5,167.5 0 1,1 -335,0
-                              Z"/>
-                        <path id="innerC" class="coil"
-                              d="M404.4,221
-                              c-39.6-7.4-65.7-45.6-58.3-85.2
-                              s41.6-63.7,81.2-56.3
-                              c39.6,7.4,65.7,45.6,58.3,85.2
-                              s-41.6,63.7,-81.2,56.3
-                              Z"/>
-                    </g>
-                    <polygon id="tri1" fill="#d7e9cf" points="0,47 0,0 44,22"/>
-                    <polygon id="tri2" fill="#d7e9cf" points="0,47 0,0 44,22"/>
-
-                                        <g fill="#d7e9cf">
-{#                                            <circle id="orb1" cx="123" cy="410" r="105"/>#}
-                                            <circle id="orb2" cx="540" cy="45" r="134"/>
-                                        </g>
-
-                    <g fill="rgb(255, 255, 255, 0.60)">
-{#                    <g fill="#eaede8">#}
-                        <path id="wave2"
-                              d="M-941,1510c89-58,147-115,211-201s142-153,210-195s144-42,208-86s69-130,70-173s5-129,38-193 c0,0,17.5-27.5,30.9-40.1C-159.6,609.4-137,593-137,593c89-58,147-115,211-201s142-153,210-195s144-42,208-86s69-130,70-173 s5-129,38-193v1765H-941z"/>
-                    </g>
-                    <g fill="#d4cac8">
-                        <path id="wave1"
-                              d="M1551.5-1044.5c0,0-63,27-131,91s-122,185-186,244s-163,152.7-206,263.3s-90,162.7-128,189.7c0,0-14,10-26,16 c-16,8-24,11-24,11s-63,27-131,91s-122,185-186,244s-163,152.7-206,263.3c-9,23.2-18.2,43.9-27.5,62.3c56.5,0,1255.5-0.1,1255.5-0.1 L1551.5-1044.5z"/>
-                    </g>
-
-                    <g clip-path="url(#orbClip1)">
-                        <image class="scratches" width="150" href="https://assets.codepen.io/721952/scratches2.png"/>
-                        <use href="#wave2" fill="#3f7773"/>
-                        <use href="#wave1" fill="#271b13"/>
-                    </g>
-
-                    <path id="star" fill="#fff"
-                          d="M397,17.6c3-3,6.1-9.1,6.1-9.1s0.8,3.8,4.5,7.6c6.1,6.1,9.1,6.1,9.1,6.1s-3,1.5-7.6,6.1 s-6.1,9.1-6.1,9.1s-2.3-5.3-6.1-9.1s-8.3-5.3-8.3-5.3S394,20.6,397,17.6z"/>
-
-                    <g fill="#fff" stroke-linecap="round">
-                        <g clip-path="url(#txtBoxes)">
-                            <text x="45" y="60" font-size="22" fill="#000">iaro Card</text>
-                            <text x="45" y="320" font-size="22" fill="#000">Holder Name</text>
-                            <text x="470" y="320" font-size="22" fill="#000">02/30</text>
-
-                            <img id="qr-code" style="width: 70px; position: absolute; left: 20px; top: 70px;"
-                                 src="{% static '/images/iaro-card-qr.png' %}"
-                                 alt="iaro card"/>
-                        </g>
-                    </g>
-                </g>
-            </svg>
-        </div>
+        {% include 'customers_card.html' %}
 
     {% endblock content %}
 
