--- a/iaroapp/templates/base_generic.html
+++ b/iaroapp/templates/base_generic.html
@@ -26,12 +26,17 @@
     <link id="pagestyle" href="{% static 'softTheme/css/soft-ui-dashboard.css' %}" rel="stylesheet"/>
     <link id="pagestyle_dark" href="{% static 'softTheme/css/dark-theme-core.css' %}" rel="stylesheet"/>
     <link href="{% static 'css/styles.css' %}" rel="stylesheet"/>
+    <link rel="stylesheet" href="{% static 'css/loader_animation.css' %}">
 
         {% block extra_css %}{% endblock extra_css %}
 
     <link rel="icon" href="{% static 'images/favicon.png' %}">
 </head>
 <body class="g-sidenav-show bg-gray-100">
+
+    <div class="loading-overlay" id="loadingOverlay">
+        <div class="spinner"></div>
+    </div>
 
 {% include "includes/sidebar.html" %}
 <main class="main-content position-relative h-100 border-radius-lg ">
@@ -98,6 +103,7 @@
     }
 </style>
 
+
 <script src="{% static 'feather-icons/dist/feather.min.js' %}"></script>
 
 <script src="{% static 'softTheme/js/core/popper.min.js' %}"></script>
@@ -108,6 +114,9 @@
 
 <script src="{% static 'softTheme/js/soft-ui-dashboard.js' %}"></script>
 <script src="{% static 'softTheme/js/scripts.js' %}"></script>
+
+<script src="{% static '/js/loader_animation.js' %}"></script>
+
 
 
 <script lang="javascript">
