--- a/iaroapp/static/css/loader_animation.css
+++ b/iaroapp/static/css/loader_animation.css
@@ -4,13 +4,14 @@
     left: 0;
     width: 100%;
     height: 100%;
-    /*background: rgba(255, 255, 255, 0.8);*/
+    background: rgba(0, 0, 0, 0.1);
     z-index: 9999;
     display: flex;
     justify-content: center;
     align-items: center;
     overflow: hidden;
     backdrop-filter: blur(5px);
+    -webkit-backdrop-filter: blur(5px);
     opacity: 0;
     visibility: hidden;
     transition: opacity 0.3s ease, visibility 0.3s ease;
