--- a/iaroapp/templates/includes/navigation.html
+++ b/iaroapp/templates/includes/navigation.html
@@ -28,8 +28,8 @@
                                     style="opacity: 0.75;">({{ user }})</span></span>
                         </a>
                         <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                            <li><a class="dropdown-item" href="{% url 'profile' %}">Profile</a></li>
-                            <li><a class="dropdown-item" href="{% url 'customer_index' %}">Card Dashboard</a></li>
+                            <li><a class="dropdown-item" href="{% url 'profile' %}" id="show-loading">Profile</a></li>
+                            <li><a class="dropdown-item" href="{% url 'customer_index' %}" id="show-loading">Card Dashboard</a></li>
                             {#                            <li>#}
                             {#                                <form id="logout_form" action="{% url 'user_logout' %}" method="post"#}
                             {#                                      style="display: none;">#}
@@ -39,15 +39,15 @@
                             {#                                   onclick="event.preventDefault(); document.getElementById('logout_form').submit();">Logout</a>#}
                             {#                            </li>#}
                             {% csrf_token %}
-                            <li><a class="dropdown-item" href="{% url 'user_logout' %}">Log Out</a></li>
+                            <li><a class="dropdown-item" href="{% url 'user_logout' %}" id="show-loading">Log Out</a></li>
                             {% if request.user.is_superuser %}
-                                <li><a class="dropdown-item" href="{% url 'admin:index' %}">Admin Panel</a></li>
+                                <li><a class="dropdown-item" href="{% url 'admin:index' %}" id="show-loading">Admin Panel</a></li>
                             {% endif %}
                         </ul>
                     </li>
                 {% else %}
                     <li class="nav-item d-flex align-items-center">
-                        <a href="{% url 'login' %}" class="nav-link text-body font-weight-bold px-0">
+                        <a href="{% url 'login' %}" class="nav-link text-body font-weight-bold px-0" id="show-loading">
                             <i class="fa fa-user me-sm-1"></i>
                             <span class="d-sm-inline d-none me-3">Sign In</span>
                         </a>
