--- a/iaroapp/templates/includes/sidebar.html
+++ b/iaroapp/templates/includes/sidebar.html
@@ -14,7 +14,7 @@
         <ul class="navbar-nav">
 
             <li class="nav-item">
-                <a class="nav-link {% if '/' == request.path %} active {% endif %} " href=" {% url 'index' %}">
+                <a class="nav-link {% if '/' == request.path %} active {% endif %} " href=" {% url 'index' %}" id="show-loading">
                     <div class="icon icon-shape icon-sm shadow border-radius-md bg-white text-center me-2 d-flex align-items-center justify-content-center" style="padding: 8px">
                         <span data-feather="home" class="align-text-bottom"></span>
                     </div>
@@ -23,7 +23,7 @@
             </li>
 
             <li class="nav-item">
-                <a class="nav-link {% if '/tasks/' == request.path %} active {% endif %} " href=" {% url 'tasks' %}">
+                <a class="nav-link {% if '/tasks/' == request.path %} active {% endif %} " href=" {% url 'tasks' %}" id="show-loading">
                     <div class="icon icon-shape icon-sm shadow border-radius-md bg-white text-center me-2 d-flex align-items-center justify-content-center" style="padding: 8px">
                         <span data-feather="check-square" class="align-text-bottom"></span>
                     </div>
@@ -32,7 +32,7 @@
             </li>
 
             <li class="nav-item">
-                <a class="nav-link {% if '/procedures/opening' == request.path %} active {% endif %} " href=" {% url 'opening' %}">
+                <a class="nav-link {% if '/procedures/opening' == request.path %} active {% endif %} " href=" {% url 'opening' %}" id="show-loading">
                     <div class="icon icon-shape icon-sm shadow border-radius-md bg-white text-center me-2 d-flex align-items-center justify-content-center" style="padding: 8px">
                         <span data-feather="sunrise" class="align-text-bottom"></span>
                     </div>
@@ -40,7 +40,7 @@
                 </a>
             </li>
             <li class="nav-item">
-                <a class="nav-link {% if '/procedures/closing' == request.path %} active {% endif %} " href=" {% url 'closing' %}">
+                <a class="nav-link {% if '/procedures/closing' == request.path %} active {% endif %} " href=" {% url 'closing' %}" id="show-loading">
                     <div class="icon icon-shape icon-sm shadow border-radius-md bg-white text-center me-2 d-flex align-items-center justify-content-center" style="padding: 8px">
                         <span data-feather="sunset" class="align-text-bottom"></span>
                     </div>
@@ -49,7 +49,7 @@
             </li>
 
             <li class="nav-item">
-                <a class="nav-link {% if '/inventory/packaging' == request.path %} active {% endif %} " href=" {% url 'inventory_packaging' %}">
+                <a class="nav-link {% if '/inventory/packaging' == request.path %} active {% endif %} " href=" {% url 'inventory_packaging' %}" id="show-loading">
                     <div class="icon icon-shape icon-sm shadow border-radius-md bg-white text-center me-2 d-flex align-items-center justify-content-center" style="padding: 8px">
                         <span data-feather="package" class="align-text-bottom"></span>
                     </div>
@@ -58,7 +58,7 @@
             </li>
 
             <li class="nav-item">
-                <a class="nav-link {% if '/inventory/populate' == request.path %} active {% endif %} " href=" {% url 'inventory_populate' %}">
+                <a class="nav-link {% if '/inventory/populate' == request.path %} active {% endif %} " href=" {% url 'inventory_populate' %}" id="show-loading">
                     <div class="icon icon-shape icon-sm shadow border-radius-md bg-white text-center me-2 d-flex align-items-center justify-content-center" style="padding: 8px">
                         <span data-feather="layers" class="align-text-bottom"></span>
                     </div>
@@ -74,7 +74,7 @@
             </h6>
             <ul class="navbar-nav">
                 <li class="nav-item">
-                    <a class="nav-link {% if '/inventory/shopping' == request.path %} active {% endif %} " href=" {% url 'inventory_shopping' %}">
+                    <a class="nav-link {% if '/inventory/shopping' == request.path %} active {% endif %} " href=" {% url 'inventory_shopping' %}" id="show-loading">
                         <div class="icon icon-shape icon-sm shadow border-radius-md bg-white text-center me-2 d-flex align-items-center justify-content-center" style="padding: 8px">
                             <span data-feather="file-text" class="align-text-bottom"></span>
                         </div>
@@ -83,7 +83,7 @@
                 </li>
 
                 <li class="nav-item">
-                    <a class="nav-link {% if '/inventory/production' == request.path %} active {% endif %} " href=" {% url 'inventory_production' %}">
+                    <a class="nav-link {% if '/inventory/production' == request.path %} active {% endif %} " href=" {% url 'inventory_production' %}" id="show-loading">
                         <div class="icon icon-shape icon-sm shadow border-radius-md bg-white text-center me-2 d-flex align-items-center justify-content-center" style="padding: 8px">
                             <span data-feather="file-text" class="align-text-bottom"></span>
                         </div>
@@ -93,7 +93,7 @@
 
                 {% if user.is_superuser %}
                     <li class="nav-item">
-                        <a class="nav-link {% if '/inventory/evaluation' == request.path %} active {% endif %} " href=" {% url 'inventory_evaluation' %}">
+                        <a class="nav-link {% if '/inventory/evaluation' == request.path %} active {% endif %} " href=" {% url 'inventory_evaluation' %}" id="show-loading">
                             <div class="icon icon-shape icon-sm shadow border-radius-md bg-white text-center me-2 d-flex align-items-center justify-content-center" style="padding: 8px">
                                 <span data-feather="file-text" class="align-text-bottom"></span>
                             </div>
@@ -102,7 +102,7 @@
                     </li>
 
                     <li class="nav-item">
-                        <a class="nav-link {% if '/tasks/evaluation' == request.path %} active {% endif %} " href=" {% url 'tasks_evaluation' %}">
+                        <a class="nav-link {% if '/tasks/evaluation' == request.path %} active {% endif %} " href=" {% url 'tasks_evaluation' %}" id="show-loading">
                             <div class="icon icon-shape icon-sm shadow border-radius-md bg-white text-center me-2 d-flex align-items-center justify-content-center" style="padding: 8px">
                                 <span data-feather="file-text" class="align-text-bottom"></span>
                             </div>
@@ -111,7 +111,7 @@
                     </li>
 
                     <li class="nav-item">
-                        <a class="nav-link {% if '/ratings/evaluation' == request.path %} active {% endif %} " href=" {% url 'ratings_evaluation' %}">
+                        <a class="nav-link {% if '/ratings/evaluation' == request.path %} active {% endif %} " href=" {% url 'ratings_evaluation' %}" id="show-loading">
                             <div class="icon icon-shape icon-sm shadow border-radius-md bg-white text-center me-2 d-flex align-items-center justify-content-center" style="padding: 8px">
                                 <span data-feather="file-text" class="align-text-bottom"></span>
                             </div>
