--- a/inventory/templates/inventory_evaluation.html
+++ b/inventory/templates/inventory_evaluation.html
@@ -1,16 +1,17 @@
 {% extends "base_generic.html" %}
 
 {% block widgets %}
-<div class="dropdown">
-  <button class="btn btn-primary dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false">
-    {{ branch }}
-  </button>
-  <ul class="dropdown-menu">
-    {% for branch in branches %}
-    <li><a class="dropdown-item" href="?branch={{ branch }}">{{ branch }}</a></li>
-    {% endfor %}
-  </ul>
-</div>
+    <div class="dropdown">
+        <button class="btn bg-gradient-primary dropdown-toggle" type="button" data-bs-toggle="dropdown"
+                aria-expanded="false">
+            {{ branch }}
+        </button>
+        <ul class="dropdown-menu dropdown-menu-end">
+            {% for branch in branches %}
+                <li><a class="dropdown-item" href="?branch={{ branch }}" id="show-loading">{{ branch }}</a></li>
+            {% endfor %}
+        </ul>
+    </div>
 {% endblock %}
 
 {% block content %}
