--- a/customers/templates/account/customers_auth.html
+++ b/customers/templates/account/customers_auth.html
@@ -15,7 +15,7 @@
     <div class="rotate-to-login">
         <div class="card-content fade-in">
 
-            <h6 class="text-center" style="color: #344767;">Log In</h6>
+            <h6 class="text-center mb-1" style="color: #000000;">Log In</h6>
 
             <div class="form-container" id="form-container">
                 {#                    LOGIN FORM  #}
@@ -66,7 +66,7 @@
                     <button class="btn bg-gradient-primary mb-2 w-100" type="submit"><b>Sign In</b></button>
 
                     <div class="text-center">
-                        <label class="form-check-label text-sm" style="cursor: auto">
+                        <label class="form-check-label text-sm ask_account" style="cursor: auto">
                             Don't have an account?
                             <a href="#" class="link-secondary  text-decoration-none" id="show-signup"><b>Sign Up</b></a>
                         </label>
@@ -76,7 +76,7 @@
 
                 {#                    SIGNUP FORM  #}
                 <form id="signup-form"
-                      class="form-card {% if form_signup.errors %}visible{% else %}hidden{% endif %} fade-in"
+                      class="form-card {% if form_signup.errors %}visible{% else %}hidden{% endif %}"
                       method="post"
                       action="{% url 'customer_register' %}" onsubmit="showLoading();">
 
