--- a/customers/templates/customers_card.html
+++ b/customers/templates/customers_card.html
@@ -31,7 +31,7 @@
 
         <g mask="url(#cardMask)">
 
-            <rect class="bg" fill="#d4cac8" width="100%" height="100%"/>
+            <rect class="bg" fill="rgb(212, 202, 200, 0.65)" width="100%" height="100%"/>
 
             <g fill="none" stroke="rgb(255, 255, 255)" stroke-width="2" stroke-dasharray="6 2 4 2.5 4 3 3.5 3">
                 <path class="coil" d="M306.1,671.4C62.6,602.5-79.4,350.4-10.9,108.3s295.2-372.5,538.7-303.6"/>
@@ -48,10 +48,10 @@
                               s-41.6,63.7,-81.2,56.3
                               Z"/>
             </g>
-            <polygon id="tri1" fill="#d7e9cf" points="0,47 0,0 44,22"/>
-            <polygon id="tri2" fill="#d7e9cf" points="0,47 0,0 44,22"/>
+            <polygon id="tri1" fill="#eaede8" points="0,47 0,0 44,22"/>
+            <polygon id="tri2" fill="#eaede8" points="0,47 0,0 44,22"/>
 
-            <g fill="#d7e9cf">
+            <g fill="#eaede8">
                 {#                                            <circle id="orb1" cx="123" cy="410" r="105"/>#}
                 <circle id="orb2" cx="540" cy="45" r="134"/>
             </g>
