--- a/iaroapp/static/css/customers_auth.css
+++ b/iaroapp/static/css/customers_auth.css
@@ -1,21 +1,23 @@
 .card-container {
-    perspective: 1000px;
+    perspective: 700px;
 }
 .card {
     transition: transform 0.6s ease-in-out;
     transform-style: preserve-3d;
     position: relative;
-
 }
 
-.card.rotate-to-signup .card-content {
+.rotate-to-signup {
     transform: rotateY(180deg);
+}
+
+.rotate-to-login {
+    transform: rotateY(0deg);
 }
 
 .form-container {
     position: relative;
     width: 100%;
-
 }
 
 .form-container.hidden {
@@ -27,7 +29,7 @@
 }
 
 .fade-in {
-    animation: fadeIn 0.6s;
+    animation: fadeIn 0.7s;
 }
 
 @keyframes fadeIn {
@@ -37,14 +39,6 @@
     100% {
         opacity: 1;
     }
-}
-
-.rotate-to-signup {
-    transform: rotateY(180deg);
-}
-
-.rotate-to-login {
-    transform: rotateY(0deg);
 }
 
 .text-center label {
@@ -89,12 +83,12 @@
     max-height: 300px;
     opacity: 1;
     visibility: visible;
-    transition: max-height 0.4s ease, opacity 0.4s ease,visibility 0.4s ease;
+    transition: max-height 0.6s ease, opacity 0.6s ease,visibility 0.6s ease;
 }
 
 .blur-effect {
-    filter: blur(50px);
-    transition: filter 0.6s ease-in-out;
+    filter: blur(10px);
+    transition: filter 0.3s ease-in-out;
 }
 
 .custom-divider {
@@ -149,7 +143,7 @@
 
 .btn-social i {
     font-size: 14px;
-    color: black;
+    color: #060606;
 }
 
 .fa-apple {
@@ -177,4 +171,15 @@
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
 }
 
+.ask_account{
+    margin-left: 0 !important;
+    margin-bottom: 0.7rem !important;
+}
 
+label {
+    color: #060606 !important;
+}
+
+span {
+    color: #060606 !important;
+}
