--- a/iaroapp/static/css/customers_base.css
+++ b/iaroapp/static/css/customers_base.css
@@ -32,3 +32,11 @@ body {
     border-image-slice: 1;
     border-image-source: linear-gradient(to right, rgba(0, 0, 0, 0) 0%, rgba(0, 0, 0, 0.5) 50%, rgba(0, 0, 0, 0) 100%);
 }
+
+h6 {
+    color: #060606 !important;
+}
+
+p {
+    color: #060606 !important;
+}
