fix some lost staff on precommit

--- a/customers/templates/customers_base.html
+++ b/customers/templates/customers_base.html
@@ -14,7 +14,7 @@
     <link rel="stylesheet" href="{% static 'css/customers_base.css' %}">
     <link rel="stylesheet" href="{% static 'css/loader_animation.css' %}">
 
-    <script src="{% static '/js/loader_animation.js' %}"></script>
+    <script src="{% static 'js/loader_animation.js' %}"></script>
 
     {% block extra_import %}{% endblock %}
 
