--- a/iaroapp/templates/base_generic.html
+++ b/iaroapp/templates/base_generic.html
@@ -116,7 +116,7 @@
 <script src="{% static 'softTheme/js/soft-ui-dashboard.js' %}"></script>
 <script src="{% static 'softTheme/js/scripts.js' %}"></script>
 
-<script src="{% static '/js/loader_animation.js' %}"></script>
+<script src="{% static 'js/loader_animation.js' %}"></script>
 
 
 
