--- a/customers/templates/customers_index.html
+++ b/customers/templates/customers_index.html
@@ -5,7 +5,7 @@
     <link rel="stylesheet" href="{% static 'css/customers_card.css' %}">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.10.4/gsap.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.10.4/MotionPathPlugin.min.js"></script>
-    <script src="{% static '/js/customers_card.js' %}"></script>
+    <script src="{% static 'js/customers_card.js' %}"></script>
 {% endblock extra_import %}
 
 {% block head_title %}
