--- a/ratings/templates/ratings_evaluation.html
+++ b/ratings/templates/ratings_evaluation.html
@@ -32,7 +32,7 @@
                 <div class="d-flex" style="flex-direction: column; height: 100%;">
                     <div class="d-flex">
                         <div class="flex-shrink-0">
-                            <img src="{{ item.profile.avatar.url }}"
+                            <img src="{% if item.profile.avatar %}{{ item.profile.avatar.url }}{% else %}{% static 'images/avatar.png' %}{% endif %}"
                                  alt="{{ item.user.username }}'s avatar" class="img-fluid avatar-img">
                         </div>
                         <div class="flex-grow-1 ms-3">
