--- a/users/templates/profile.html
+++ b/users/templates/profile.html
@@ -1,4 +1,5 @@
 {% extends "base_generic.html" %}
+{% load static %}
 
 {% block content %}
     <div class="row">
@@ -12,8 +13,10 @@
                     {% csrf_token %}
                     <div class="d-flex justify-content-center">
                         {% if user.profile %}
-                            <img class="img-fluid avatar-img" src="{{ user.profile.avatar.url }}"
-                                 alt="{{ user.username }}'s avatar" accept=".jpg,.jpeg,.png"/>
+                             <img class="img-fluid avatar-img"
+                                 src="{% if user.profile.avatar %}{{ user.profile.avatar.url }}{% else %}{% static 'images/avatar.png' %}{% endif %}"
+                                 alt="{{ user.username }}'s avatar"
+                                 accept=".jpg,.jpeg,.png"/>
                         {% endif %}
                     </div>
                     <h2 class="text-center">{{ user.username | title }}</h2>
